# takeoff_modeling_v2

./: README.md  TODO.md  pyproject.toml
takeoff_modeling_v2/: takeoff_model_v2.py
