[tool.poetry]
name = "takeoff-modeling-v2"
version = "0.1.0"
description = ""
authors = ["Eli Lifland <eli.d.lifland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
pydantic = "^2.6.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
